2013-01-04  Ethan A Merritt  <merritt@u.washington.edu>

	* src/command.c (replotrequest):  #ifdef VOLATILE_REFRESH is needed with
	./configure --disable-volatile-data

2012-12-27  Daniel J Sebald <daniel.sebald@ieee.org>

	* configure.in:  Repair shell syntax used to control the definition
	of CC and CXX for cross-building.

2012-12-27  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* term/emf.trm:  Adjust vertical centering of characters to match 
	current font size.

2012-12-19  Olaf Booij  <obooij@users.sourceforge.net>

	* src/graph3d.c:  In 3D plots with 'set view equal xyz' the point about
	which zoom operates should be in the middle of the screen, not at z=0.

2012-12-18  Ethan A Merritt  <merritt@u.washington.edu>

	* src/term.c (enhanced_recursion):  Depending on the terminal type and
	the current encoding, improper enhanced text syntax could cause anything
	from garbage text to a segfault:
	  set termopt enhanced; 
	  set label "~"; plot [0:1][0:1] '+' using 1:1:("~^") with labels
	Bugfix

	* src/gplt_x11.c:  Change the fallback font string used when the current
	encoding is UTF-8 (iso10646-1) or when all else fails (iso8859-1).  This
	is admitted biased towards English as a default, but the previous string
	(*-*) does not work for common recent x11 implementations.

2012-12-16  Ethan A Merritt  <merritt@u.washington.edu>

	* term/post.trm (set_font): quick fix to redefine vshift every time the
	current font size changes. A better fix would query the font internally.
	The failure to do this led to poor vertical centering of text using any
	font other than the default, and bad key box layout for small key fonts.

	* term/svg.trm (set_font): Similar fix for svg.

	* src/wxterminal/gp_cairo.c (gp_cairo_draw_text): and for wxt.

2012-12-14  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c:  If a data column requested by name is not found,
	treat it as undefined (DF_UNDEFINED) rather than terminating data input